--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,1 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+
 @import "tailwindcss";
+
+:root {
+  --font-body: 'Inter', sans-serif;
+  --font-title: 'Playfair Display', serif;
+}
+
+body {
+  font-family: var(--font-body);
+}
+
+.font-playfair {
+  font-family: var(--font-title);
+}
