--- a/templates/index_page/index.html.twig
+++ b/templates/index_page/index.html.twig
@@ -1,23 +1,14 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello IndexPageController!{% endblock %}
-
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1 class="text-red-400 ">Hello {{ controller_name }}! ✅</h1>
-    <p>
-      {{ id }}
-    </p>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>C:/Users/e2405256/Documents/GitHub/filrouge/src/Controller/IndexPageController.php</code></li>
-        <li>Your template at <code>C:/Users/e2405256/Documents/GitHub/filrouge/templates/index_page/index.html.twig</code></li>
-    </ul>
-</div>
+  <div class="header-container w-full relative">
+    <img 
+      src="{{ asset('images/header-background.jpg') }}" 
+      alt="Header Background" 
+      class="w-full h-auto object-cover min-h-64 max-h-screen" 
+    />
+    
+    <div class="header-content absolute top-0 left-0 w-full h-full flex items-center justify-center">
+    </div>
+  </div>
 {% endblock %}
