--- a/templates/index_page/index.html.twig
+++ b/templates/index_page/index.html.twig
@@ -1,14 +1,22 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-  <div class="header-container w-full relative">
+  <div class="w-full relative">
     <img 
       src="{{ asset('images/header-background.jpg') }}" 
       alt="Header Background" 
       class="w-full h-auto object-cover min-h-64 max-h-screen" 
     />
     
-    <div class="header-content absolute top-0 left-0 w-full h-full flex items-center justify-center">
+    <div class="absolute top-0 left-0 w-full h-full flex flex-col items-center justify-center bg-black/30">
+      <h1 class="text-5xl text-[#FEFDFB] font-semibold text-center font-playfair">Savourez l'Excellence Artisanale</h1>
+      <p class="text-lg text-[#FEFDFB] mt-1 text-center">Des pains et pâtisseries artisanaux livrés directement chez vous</p>
+
+      <div class="mt-4">
+        <a class="bg-[#EDA239] text-black px-4 py-2 rounded-md font-medium hover:bg-[#EFAF7D] transition duration-300 ease-in-out">
+          Découvrir nos produits
+        </a>
+      </div>
     </div>
   </div>
 {% endblock %}
