feat: Add background color to body for improved visual design

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,7 +13,7 @@
       {{ encore_entry_script_tags('app') }}
     {% endblock %}
   </head>
-  <body>
+  <body class="bg-[#FEFDFB]">
     <twig:Navbar />
      {% block body %}{% endblock %}
     <twig:Footer />
