--- a/templates/index_page/index.html.twig
+++ b/templates/index_page/index.html.twig
@@ -21,4 +21,36 @@
       </div>
     </div>
   </div>
+
+  {# ------------------------------------------------ #}
+
+  <div class="w-full py-24">
+    <h1 class="text-5xl text-center font-playfair">Pourquoi nous choisir</h1>
+    <p class="text-lg mt-1 text-center">Nous combinons tradition et innovation pour vous offrir une expérience gustative exceptionnelle</p>
+
+    <div class="mt-8 flex flex-wrap justify-center gap-2 md:gap-4">
+      {{ component('card', {
+        label: 'Qualité Artisanale',
+        description: 'Tous nos produits sont préparés à la main avec des ingrédients soigneusement sélectionnés.',
+        icon: 'star',
+        variant: 'big'
+      }) }}
+        
+      {{ component('card', {
+        label: 'Livraison à Domicile',
+        description: 'Profitez de nos délices livrés directement chez vous, frais et à l\'heure.',
+        icon: 'truck',
+        variant: 'big'
+      }) }}
+
+      {{ component('card', {
+        label: 'Fraîcheur Garantie',
+        description: 'Nos produits sont préparés quotidiennement pour garantir une fraîcheur incomparable.',
+        icon: 'clock',
+        variant: 'big'
+      }) }}
+    </div>
+  </div>
+
+  {# ------------------------------------------------ #}
 {% endblock %}
