--- a/templates/index_page/index.html.twig
+++ b/templates/index_page/index.html.twig
@@ -58,13 +58,37 @@
     <h1 class="text-5xl text-center font-playfair">Nos Produits Populaires</h1>
     <p class="text-lg mt-1 text-center">Découvrez nos créations les plus appréciées par nos clients</p>
 
-    <div class="mt-8 flex flex-wrap justify-center gap-2 md:gap-4">      
+    <div class="mt-8 flex flex-wrap justify-center gap-2 md:gap-4">
       <twig:ProductCard
-        imageUrl="https://boulangerie.gaetanhus.fr/products/f9878fc8-a103-49b4-9e2b-1ef3f1757b98.webp"
+        imageUrl="https://boulangerie.gaetanhus.fr/products/f9878fc8-a103-49b4-9e2b-1ef3f1757b98.webp?date=now"
         price="1.10"
         category="Pains"
         name="La Mie Dorée"
         description="Pain artisanal à croûte dorée et craquante. Mie aérée et moelleuse aux notes de céréales. Fermentation lente pour un goût authentique. Parfait pour tous vos repas."
+      />
+
+      <twig:ProductCard
+        imageUrl="https://boulangerie.gaetanhus.fr/products/58c7d2a9-df13-4638-a75a-17422ae8a2cb.webp?dddd=dadadaaaa"
+        price="1.20"
+        category="Viennoiseries"
+        name="Le Croissant Tradition"
+        description="Viennoiserie au beurre d'exception. Feuilletage délicat et croustillant. Façonné à la main selon la tradition française. Coeur fondant et alvéolé pour un plaisir authentique."
+      />
+
+      <twig:ProductCard
+        imageUrl="https://boulangerie.gaetanhus.fr/products/2f394435-19d7-43ef-bf59-bd061443a52f.webp?date=now"
+        price="1.20"
+        category="Pâtisseries"
+        name="L'Éclair Chocolat"
+        description="Pâtisserie française à la pâte légère et craquante. Garniture onctueuse au chocolat noir. Glaçage brillant et intense. Équilibre parfait entre douceur et caractère."
+      />
+
+      <twig:ProductCard
+        imageUrl="https://boulangerie.gaetanhus.fr/products/42169c00-45ff-454b-85eb-3e20af134e93.webp?date=now"
+        price="1.20"
+        category="Spécialités"
+        name="La Fougasse Provençale"
+        description="Pain méditerranéen à l'huile d'olive. Texture moelleuse et parfumée aux herbes de Provence. Forme traditionnelle fendue à la main. Idéal pour accompagner vos apéritifs."
       />
     </div>
   </div>
