--- a/templates/index_page/index.html.twig
+++ b/templates/index_page/index.html.twig
@@ -97,67 +97,58 @@
     <h1 class="text-5xl text-center font-playfair">Ce Que Disent Nos Clients</h1>
     <p class="text-lg mt-1 text-center">Découvrez les témoignages de nos clients satisfaits</p>
 
-
-    <div class="mt-8 relative w-full overflow-hidden">
-    <div class="flex overflow-x-hidden w-full py-16">
-    <div class="flex gap-4 px-4">
-      <twig:ReviewCard
-        name="Marie Dupont"
-        date="12/09/2023"
-        rating="5"
-        review="La meilleure boulangerie de la ville ! Le pain est toujours frais et délicieux. Je recommande vivement."
-      />
-
-      <twig:ReviewCard
-        name="Jean Martin"
-        date="10/09/2023"
-        rating="4"
-        review="Les viennoiseries sont incroyables, mais j'aimerais voir plus de choix de pains spéciaux."
-      />
-
-      <twig:ReviewCard
-        name="Sophie Bernard"
-        date="08/09/2023"
-        rating="5"
-        review="Un service impeccable et des produits de qualité. Je suis une cliente fidèle depuis des années."
-      />
-
-      <twig:ReviewCard
-        name="Lucas Lefevre"
-        date="05/09/2023"
-        rating="4.5"
-        review="Les pâtisseries sont délicieuses, mais le prix est un peu élevé."
-      />
-
-      <twig:ReviewCard
-        name="Emma Dubois"
-        date="03/09/2023"
-        rating="5"
-        review="Une expérience gustative exceptionnelle ! Chaque bouchée est un régal. Bravo à l'équipe !"
-      />
-
-      <twig:ReviewCard
-        name="Paul Moreau"
-        date="01/09/2023"
-        rating="4.5"
-        review="Le pain est toujours croustillant et frais. J'adore l'ambiance de la boulangerie."
-      />
-
-      <twig:ReviewCard
-        name="Chloé Petit"
-        date="28/08/2023"
-        rating="5"
-        review="Une boulangerie artisanale qui mérite d'être connue. Les produits sont faits avec passion."
-      />
-
-      <twig:ReviewCard
-        name="Girard Piqué"
-        date="25/08/2023"
-        rating="4"
-        review="Les produits sont bons, mais j'aimerais voir plus de choix pour les personnes allergiques."
-      />
-      </div>
-    </div>
+    {{ component('ReviewsSection', {
+      reviews: [
+        {
+          name: 'Marie Dupont',
+          date: '12/09/2023',
+          rating: 5,
+          review: 'La meilleure boulangerie de la ville ! Le pain est toujours frais et délicieux. Je recommande vivement.'
+        },
+        {
+          name: 'Jean Martin',
+          date: '10/09/2023',
+          rating: 4,
+          review: 'Les viennoiseries sont incroyables, mais j\'aimerais voir plus de choix de pains spéciaux.'
+        },
+        {
+          name: 'Sophie Bernard',
+          date: '08/09/2023',
+          rating: 5,
+          review: 'Un service impeccable et des produits de qualité. Je suis une cliente fidèle depuis des années.'
+        },
+        {
+          name: 'Lucas Lefevre',
+          date: '05/09/2023',
+          rating: 4.5,
+          review: 'Les pâtisseries sont délicieuses, mais le prix est un peu élevé.'
+        },
+        {
+          name: 'Emma Dubois',
+          date: '03/09/2023',
+          rating: 5,
+          review: 'Une expérience gustative exceptionnelle ! Chaque bouchée est un régal. Bravo à l\'équipe !'
+        },
+        {
+          name: 'Paul Moreau',
+          date: '01/09/2023',
+          rating: 4.5,
+          review: 'Le pain est toujours croustillant et frais. J\'adore l\'ambiance de la boulangerie.'
+        },
+        {
+          name: 'Chloé Petit',
+          date: '28/08/2023',
+          rating: 5,
+          review: 'Une boulangerie artisanale qui mérite d\'être connue. Les produits sont faits avec passion.'
+        },
+        {
+          name: 'Girard Piqué',
+          date: '25/08/2023',
+          rating: 4,
+          review: 'Les produits sont bons, mais j\'aimerais voir plus de choix pour les personnes allergiques.'
+        }
+      ]
+    }) }}
   </div>
 </div>
 {% endblock %}
