--- a/templates/components/ProductCard.html.twig
+++ b/templates/components/ProductCard.html.twig
@@ -1,28 +1,29 @@
-<div class="bg-[#FEFDFB] rounded-lg p-4 w-[25rem] flex flex-col shadow-lg h-[32rem]">
+<div class="bg-[#FEFDFB] rounded-lg p-3 w-full max-w-xs flex flex-col shadow-lg h-auto">
   <img
     src="{{ imageUrl }}"
     alt="Product Image"
-    class="w-full h-64 object-cover rounded-lg mb-4"
+    class="w-full h-48 object-cover rounded-lg mb-3"
   />
 
   <div class="flex flex-col flex-grow">
-    <span class="text-sm font-normal text-gray-800">{{ category }}</span>
+    <span class="text-xs font-normal text-gray-800">{{ category }}</span>
 
-    <div class="w-full flex flex-row items-center justify-between">
-      <p class="font-semibold text-xl font-playfair">{{ name }}</p>
-      <span class="text-sm font-semibold text-gray-800 px-2 py-0.5 rounded-full bg-[#EDA23930]">{{ price }}€</span>
+    <div class="w-full flex flex-row items-center justify-between mt-1">
+      <p class="font-semibold text-lg font-playfair">{{ name }}</p>
+      <span class="text-xs font-semibold text-gray-800 px-2 py-0.5 rounded-full bg-[#EDA23930]">{{ price }}€</span>
     </div>
 
-    <p class="text-gray-600 mt-2 text-sm flex-grow">{{ description }}</p>
+    <p class="text-gray-600 mt-2 text-xs flex-grow line-clamp-3">{{ description }}</p>
 
-    <div class="w-full flex flex-row gap-2 mt-4">
+    <div class="w-full flex flex-col sm:flex-row gap-2 mt-3">
       <twig:Button
-        label="Ajouter au Panier"
+        label="Ajouter"
         variant="primary"
         href="#"
         fullWidth
         iconLeft="shopping-bag"
         size="sm"
+        class="w-full"
       />
 
       <twig:Button
@@ -32,6 +33,7 @@
         fullWidth
         iconLeft="book-image"
         size="sm"
+        class="w-full"
       />
     </div>
   </div>
