fix: Update image URLs to use the new CDN for Navbar and ProductCard components

--- a/templates/components/Navbar.html.twig
+++ b/templates/components/Navbar.html.twig
@@ -20,7 +20,7 @@
         </button>
       </div>
       <div>
-        <img src="https://cdn.douceurs-palais.fr/icon-title.png" alt="Logo" height="140px" width="140px" />
+        <img src="https://boulangerie.gaetanhus.fr/icon-title.png" alt="Logo" height="140px" width="140px" />
       </div>
     </div>
     <div class="flex items-center gap-2">
@@ -55,7 +55,7 @@
   </div>
   
   <div class="hidden md:block absolute left-1/2 top-1/2 transform -translate-x-1/2 -translate-y-1/2">
-    <img src="https://cdn.douceurs-palais.fr/icon-title.png" alt="Logo" height="190px" width="190px" />
+    <img src="https://boulangerie.gaetanhus.fr/icon-title.png" alt="Logo" height="190px" width="190px" />
   </div>
   
   <div class="hidden md:flex items-center gap-4">
