--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <title>{% block title %}Au Douceurs du Palais{% endblock %}</title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Au Douceurs du Palais - Votre pâtisserie en ligne. Commandez vos douceurs préférées et faites-vous livrer à domicile.">
+    <meta name="keywords" content="pâtisserie, douceurs, en ligne, livraison, desserts, gâteaux, macarons">
+    <meta name="author" content="Au Douceurs du Palais">
+    <meta name="robots" content="index, follow">
+    <meta name="theme-color" content="#fefdfb">
 
     {% block stylesheets %}
       {{ encore_entry_link_tags('app') }}
