feat: Implement product management features with fixtures, repository, and controller updates

--- a/templates/product_page/index.html.twig
+++ b/templates/product_page/index.html.twig
@@ -123,10 +123,10 @@
 
           <div class="bg-[#F8F8F1] p-4 rounded-md mb-6">
             <ul class="list-disc pl-5 space-y-2">
-              <li><strong>Calories :</strong> {{ product.nutritional_values.calories }} kcal</li>
-              <li><strong>Matières grasses :</strong> {{ product.nutritional_values.fat }} g</li>
-              <li><strong>Glucides :</strong> {{ product.nutritional_values.carbohydrates }} g</li>
-              <li><strong>Protéines :</strong> {{ product.nutritional_values.proteins }} g</li>
+              <li><strong>Calories :</strong> {{ product.nutritionalValues.calories }}kcal</li>
+              <li><strong>Matières grasses :</strong> {{ product.nutritionalValues.fat }}g</li>
+              <li><strong>Glucides :</strong> {{ product.nutritionalValues.carbohydrates }}g</li>
+              <li><strong>Protéines :</strong> {{ product.nutritionalValues.proteins }}g</li>
             </ul>
           </div>
         </div>
