--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,9 +19,11 @@
       {{ encore_entry_script_tags('app') }}
     {% endblock %}
   </head>
-  <body class="bg-[#FEFDFB]">
-    <twig:Navbar />
-     {% block body %}{% endblock %}
+  <body class="bg-[#FEFDFB] flex flex-col min-h-screen">
+    <twig:Navbar class="flex-shrink-0" />
+    <main class="flex-grow">
+      {% block body %}{% endblock %}
+    </main>
     <twig:Footer />
   </body>
 </html>
