feat: Add href attribute to reset link button in forgot password template

--- a/templates/account_page/forgot-password.html.twig
+++ b/templates/account_page/forgot-password.html.twig
@@ -35,7 +35,8 @@
               label: 'Envoyer un lien de réinitialisation',
               variant: 'primary',
               type: 'submit',
-              fullWidth: true
+              fullWidth: true,
+              href: path('app_check_email_page')
             }) }}
           </div>
         </form>
