--- a/templates/account_page/check-email.html.twig
+++ b/templates/account_page/check-email.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-  <div class="min-h-screen flex flex-col items-center justify-center bg-[#FEFDFB] py-12 px-4 sm:px-6 lg:px-8">
+  <div class="flex flex-col items-center justify-center bg-[#FEFDFB] py-12 px-4 sm:px-6 lg:px-8">
     <div class="w-full max-w-md">
       <div class="bg-white shadow-lg rounded-lg p-8 border border-gray-100 text-center">
         <div class="rounded-full mx-auto flex items-center justify-center w-16 h-16 bg-green-100 text-green-500 mb-4">
