--- a/templates/account_page/login.html.twig
+++ b/templates/account_page/login.html.twig
@@ -35,7 +35,7 @@
           <div>
             <div class="flex items-center justify-between">
               <label for="password" class="block text-sm font-medium text-gray-700">Mot de passe</label>
-              <a href="/" class="text-sm text-[#EDA239] hover:text-[#EFAF7D]">
+              <a href="{{ path('app_forgot_password_page') }}" class="text-sm text-[#EDA239] hover:text-[#EFAF7D]">
                 Mot de passe oublié ?
               </a>
             </div>
@@ -71,7 +71,7 @@
         <div class="mt-6 text-center">
           <p class="text-sm text-gray-600">
             Pas encore de compte ?
-            <a href="/" class="font-medium text-[#EDA239] hover:text-[#EFAF7D]">
+            <a href="{{ path('app_register_page') }}" class="font-medium text-[#EDA239] hover:text-[#EFAF7D]">
               Créer un compte
             </a>
           </p>
