--- a/templates/components/Navbar.html.twig
+++ b/templates/components/Navbar.html.twig
@@ -19,9 +19,9 @@
           </svg>
         </button>
       </div>
-      <div>
+      <a href="/">
         <img src="https://cdn.douceurs-palais.fr/icon-title.png" alt="Logo" height="140px" width="140px" />
-      </div>
+      </a>
     </div>
     <div class="flex items-center gap-2">
       <div class="rounded-full p-2 flex items-center justify-center cursor-pointer">
