div to a, layout laptopt

--- a/templates/components/Navbar.html.twig
+++ b/templates/components/Navbar.html.twig
@@ -54,9 +54,9 @@
     </div>
   </div>
   
-  <div class="hidden md:block absolute left-1/2 top-1/2 transform -translate-x-1/2 -translate-y-1/2">
+  <a href="/" class="hidden md:block absolute left-1/2 top-1/2 transform -translate-x-1/2 -translate-y-1/2">
     <img src="https://cdn.douceurs-palais.fr/icon-title.png" alt="Logo" height="190px" width="190px" />
-  </div>
+  </a>
   
   <div class="hidden md:flex items-center gap-4">
     <div class="rounded-full p-2 flex items-center justify-center cursor-pointer">
