refactor(templates): simplify page titles by removing the suffix "- Aux Douceurs du Palais" for consistency and clarity across templates

--- a/templates/account/address-form.html.twig
+++ b/templates/account/address-form.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{% if edit is defined and edit %}Modifier{% else %}Ajouter{% endif %} une adresse - Aux Douceurs du Palais{% endblock %}
+{% block title %}{% if edit is defined and edit %}Modifier{% else %}Ajouter{% endif %} une adresse{% endblock %}
 
 {% block body %}
   <div class="bg-[#FEFDFB] py-10 px-4 md:px-6 lg:px-8">
