--- a/templates/product_page/index.html.twig
+++ b/templates/product_page/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block meta %}
-  <title>{{ product.name }} - Douceurs du Palais</title>
+  <title>{{ product.name }}</title>
   <meta name="description" content="{{ product.description }}">
 
   <meta property="og:type" content="product">
