--- a/templates/account/addresses.html.twig
+++ b/templates/account/addresses.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Mes adresses - Aux Douceurs du Palais{% endblock %}
+{% block title %}Mes adresses{% endblock %}
 
 {% block body %}
   <div class="bg-[#FEFDFB] py-10 px-4 md:px-6 lg:px-8">
