--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,8 +2,14 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>{% block title %}Au Douceurs du Palais{% endblock %}</title>
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
+    <title>
+      {%- if block('title') is defined and block('title')|trim is not empty -%}
+        {{ block('title') }} -
+      {%- endif -%}
+      Aux Douceurs du Palais
+    </title>
+
+    <link rel="icon" href="https://cdn.douceurs-palais.fr/icon-tab.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Au Douceurs du Palais - Votre pâtisserie en ligne. Commandez vos douceurs préférées et faites-vous livrer à domicile.">
     <meta name="keywords" content="pâtisserie, douceurs, en ligne, livraison, desserts, gâteaux, macarons">
