--- a/templates/security/reset-password.html.twig
+++ b/templates/security/reset-password.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Réinitialisation du mot de passe - Aux Douceurs du Palais{% endblock %}
+{% block title %}Réinitialisation du mot de passe{% endblock %}
 
 {% block body %}
   <div class="flex flex-col items-center justify-center bg-[#FEFDFB] py-12 px-4 sm:px-6 lg:px-8">
