--- a/templates/bakery/show.html.twig
+++ b/templates/bakery/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{ bakery.name }} - Aux Douceurs du Palais{% endblock %}
+{% block title %}{{ bakery.name }}{% endblock %}
 
 {% block body %}
   <div class="bg-[#FEFDFB]">
@@ -73,7 +73,7 @@
       <div class="max-w-4xl mx-auto mb-16">
         <div class="flex flex-col md:flex-row gap-8">
           <div class="flex-1">
-            <h2 class="text-3xl font-playfair mb-4">À propos de {{ bakery.name }}</h2>
+            <h2 class="text-3xl font-playfair mb-4">À propos de nous</h2>
             <div class="prose max-w-none">
               <p class="text-gray-600 mb-6">{{ bakery.description }}</p>
 
@@ -104,26 +104,35 @@
                   </div>
 
                   {% if bakery.phone %}
-                    <div class="flex items-center">
-                      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-gray-500 mr-3" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <div class="flex items-center hover:underline">
+                      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-blue-500 mr-3" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z" />
                       </svg>
-                      <p class="text-gray-800">{{ bakery.phone }}</p>
+                      <a
+                        href="tel:+33{{ bakery.phone|replace({' ': '', '(': '', ')': '', '-': ''}) }}"
+                        target="_blank"
+                        class="text-blue-600">{{ bakery.phone }}
+                      </a>
                     </div>
                   {% endif %}
 
                   {% if bakery.email %}
                     <div class="flex items-center">
-                      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-gray-500 mr-3" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-blue-500 mr-3" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
                       </svg>
-                      <p class="text-gray-800">{{ bakery.email }}</p>
+                      {# <p class="text-gray-800">{{ bakery.email }}</p> #}
+                      <a
+                        href="mailto:{{ bakery.email }}"
+                        target="_blank"
+                        class="text-blue-600 hover:underline">{{ bakery.email }}
+                      </a>
                     </div>
                   {% endif %}
 
                   {% if bakery.website %}
                     <div class="flex items-center">
-                      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-gray-500 mr-3" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-[#EDA239] mr-3" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 12a9 9 0 01-9 9m9-9a9 9 0 00-9-9m9 9H3m9 9a9 9 0 01-9-9m9 9c1.657 0 3-4.03 3-9s-1.343-9-3-9m0 18c-1.657 0-3-4.03-3-9s1.343-9 3-9m-9 9a9 9 0 019-9" />
                       </svg>
                       <p class="text-gray-800">
@@ -144,7 +153,7 @@
         <div class="mb-16">
           <h2 class="text-3xl font-playfair text-center mb-10">Nos produits les plus populaires</h2>
 
-          <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+          <div class="flex flex-wrap justify-center gap-4">
             {% for product in popularProducts %}
               <twig:ProductCard
                   imageUrl="{{ product.mainImage ?: 'https://via.placeholder.com/400x250' }}"
