--- a/templates/components/BakeryCard.html.twig
+++ b/templates/components/BakeryCard.html.twig
@@ -1,10 +1,13 @@
   <div class="bg-[#FEFDFB] rounded-lg p-3 w-full max-w-xs flex flex-col shadow-lg h-auto">
     <div class="relative w-full h-48 overflow-hidden rounded-lg mb-3">
-      <img
-        src="{{ imageUrl }}"
-        alt="Product Image"
-        class="w-full h-48 object-cover rounded-lg mb-3"
-      />
+      <a href="{{ path('app_bakery_show', { slug: name|lower|replace({' ': '-'}) }) }}" aria-label="Voir la boulangerie {{ name }}">
+        <img
+            src="{{ imageUrl }}"
+            alt="Product Image"
+            class="w-full h-48 object-cover rounded-lg mb-3"
+        />
+      </a>
+
 
       <span class="absolute top-2 left-2 bg-[#FEFDFB] text-[#121212] text-xs font-semibold px-2 py-1 rounded-full shadow-md">
         {{ note }}/5
@@ -12,13 +15,15 @@
     </div>
 
     <div class="flex flex-col flex-grow">
-      <span class="text-sm font-normal text-gray-800">{{ location }}</span>
-      
-      <p class="font-semibold text-xl font-playfair">{{ name }}</p>
+      <a href="{{ path('app_bakery_show', { slug: name|lower|replace({' ': '-'}) }) }}" aria-label="Voir la boulangerie {{ name }}" class="flex flex-col flex-grow">
+        <span class="text-sm font-normal text-gray-800">{{ location }}</span>
 
-      <p class="text-gray-600 mt-2 text-sm flex-grow line-clamp-3">{{ description }}</p>
-      
-      <p class="text-gray-600 mt-2 text-xs font-semibold mt-3">{{ address }}</p>
+        <p class="font-semibold text-xl font-playfair">{{ name }}</p>
+
+        <p class="text-gray-600 mt-2 text-sm flex-grow line-clamp-3">{{ description }}</p>
+
+        <p class="text-gray-600 mt-2 text-xs font-semibold mt-3">{{ address }}</p>
+      </a>
 
       <div class="w-full flex flex-col sm:flex-row gap-2 mt-2">
         <twig:Button
