fix(show.html.twig): add conditional check for bakery variable in title block to prevent errors when undefined fix(bakery_category.html.twig): remove redundant site name from title block for clarity fix(index.html.twig): simplify title block for categories page to enhance readability

--- a/templates/category/bakery_category.html.twig
+++ b/templates/category/bakery_category.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{ category.name }} - {{ bakery.name }} - Aux Douceurs du Palais{% endblock %}
+{% block title %}{{ category.name }} - {{ bakery.name }}{% endblock %}
 
 {% block body %}
   <div class="bg-[#FEFDFB] py-12">
