--- a/templates/category/index.html.twig
+++ b/templates/category/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Nos catégories - Aux Douceurs du Palais{% endblock %}
+{% block title %}Nos catégories{% endblock %}
 
 {% block body %}
   <div class="bg-[#FEFDFB] py-12">
