refactor(templates): simplify title block in bakery template and restore conditional logic in category template for better consistency and maintainability

--- a/templates/bakery/show.html.twig
+++ b/templates/bakery/show.html.twig
@@ -1,12 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}
-  {% if bakery is defined %}
-    {{ bakery.name }}
-  {% else %}
-    {{ category.name }}
-  {% endif %}
-{% endblock %}
+{% block title %}{{ bakery.name }}{% endblock %}
 
 {% block body %}
   <div class="bg-[#FEFDFB]">
