--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -1,6 +1,12 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{ bakery.name }}{% endblock %}
+{% block title %}
+  {% if bakery is defined %}
+    {{ bakery.name }}
+  {% else %}
+    {{ category.name }}
+  {% endif %}
+{% endblock %}
 
 {% block body %}
   <div class="bg-[#FEFDFB]">
